--- a/Multi-step form/style.css
+++ b/Multi-step form/style.css
@@ -9,30 +9,36 @@ body {
   align-items: center;
   justify-content: center;
   min-height: 100vh;
+  min-width: 100vw;
 }
 
 /* sidebar start */
 
 .form {
-  width: 1000px;
+  width: 100%;
+  max-width: 780px;
   background-color: hsl(0, 0%, 100%);
   border-radius: 10px;
   box-shadow: 0px 0px 1px black;
+  overflow: hidden;
 }
 
 .form-container {
   display: flex;
-  padding: 10px;
 }
 
 .form-sidebar {
   background-image: url("./assets/images/bg-sidebar-desktop.svg");
-  background-repeat: no-repeat;
-  width: 500px;
-  height: 600px;
-  padding: 50px 40px;
+  /* background-repeat: no-repeat; */
+  /* width: 500px; */
+  /* height: 600px; */
+  /* padding: 50px 40px; */
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  padding-left: 40px;
+  /* flex-grow: 1; */
+  min-width: 275px;
   gap: 40px;
 }
 
@@ -80,6 +86,8 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  /* max-width: 60%; */
+  padding: 40px;
 }
 
 .header .title {
@@ -91,11 +99,12 @@ body {
 
 .next-step {
   display: flex;
-  margin-top: auto;
-  margin-bottom: 20px;
+  margin-top: 20px;
+  /* margin-bottom: 20px; */
   margin-left: auto;
+  /* margin-right: 20px; */
   border: none;
-  padding: 20px 30px;
+  padding: 10px 20px;
   border-radius: 10px;
   background-color: hsl(213, 96%, 18%);
   color: white;
@@ -112,7 +121,7 @@ body {
 .step-1 form {
   display: flex;
   flex-direction: column;
-  flex: 1;
+  /* flex: 1; */
   justify-content: center;
   gap: 15px;
 }
@@ -131,7 +140,15 @@ form .error {
   font-weight: 700;
 }
 
+.grow {
+  flex-grow: 1;
+}
+
 /* step-1 end */
+
+/* step-2 start */
+
+/* step-2 end */
 
 .attribution {
   align-self: end;
