--- a/Multi-step form/style.css
+++ b/Multi-step form/style.css
@@ -29,7 +29,7 @@ body {
 
 .form-sidebar {
   background-image: url("./assets/images/bg-sidebar-desktop.svg");
-  /* background-repeat: no-repeat; */
+  background-repeat: no-repeat;
   /* width: 500px; */
   /* height: 600px; */
   /* padding: 50px 40px; */
@@ -99,7 +99,7 @@ body {
 
 .next-step {
   display: flex;
-  margin-top: 20px;
+  /* margin-top: 20px; */
   /* margin-bottom: 20px; */
   margin-left: auto;
   /* margin-right: 20px; */
@@ -116,7 +116,7 @@ body {
 /* step-1 start */
 .step-1 {
   display: flex;
-  width: 100%;
+  /* width: 100%; */
 }
 .step-1 form {
   display: flex;
@@ -125,6 +125,14 @@ body {
   justify-content: center;
   gap: 15px;
 }
+
+.label {
+  color: hsl(213, 96%, 18%);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .step-1 form input {
   padding: 15px;
   border: 1px solid hsl(231, 11%, 63%);
@@ -133,8 +141,14 @@ body {
   font-size: 15px;
 }
 
+form input::placeholder {
+  font-weight: 500;
+  font-size: 1rem;
+  font-family: inherit;
+}
+
 form .error {
-  display: none;
+  /* display: none; */
   color: hsl(354, 84%, 57%);
   font-size: 10px;
   font-weight: 700;
@@ -145,10 +159,6 @@ form .error {
 }
 
 /* step-1 end */
-
-/* step-2 start */
-
-/* step-2 end */
 
 .attribution {
   align-self: end;
