--- a/Multi-step form/style.css
+++ b/Multi-step form/style.css
@@ -14,7 +14,7 @@ body {
 
 /* sidebar start */
 
-.form {
+.multi-step-form {
   width: 100%;
   max-width: 780px;
   background-color: hsl(0, 0%, 100%);
@@ -23,28 +23,24 @@ body {
   overflow: hidden;
 }
 
-.form-container {
+.multi-step-form-container {
   display: flex;
 }
 
-.form-sidebar {
+.multi-step-form-sidebar {
   background-image: url("./assets/images/bg-sidebar-desktop.svg");
   background-repeat: no-repeat;
-  /* width: 500px; */
-  /* height: 600px; */
-  /* padding: 50px 40px; */
   display: flex;
   flex-direction: column;
   justify-content: center;
   padding-left: 40px;
-  /* flex-grow: 1; */
   min-width: 275px;
   gap: 40px;
 }
 
 .circle {
-  width: 50px;
-  height: 50px;
+  min-width: 50px;
+  min-height: 50px;
   border: 1px solid hsl(0, 0%, 100%);
   border-radius: 100%;
   display: flex;
@@ -65,29 +61,28 @@ body {
   gap: 20px;
 }
 
-.step-content {
+.step-title {
   display: flex;
   flex-direction: column;
   gap: 10px;
 }
 
-.step-content span {
+.step-title span {
   text-transform: uppercase;
   color: hsl(229, 24%, 87%);
   font-size: 16px;
 }
 
-.step-content b {
+.step-title b {
   text-transform: uppercase;
   color: hsl(0, 0%, 100%);
 }
 
-.stp {
+.step-content {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  /* max-width: 60%; */
-  padding: 40px;
+  padding: 30px;
 }
 
 .header .title {
@@ -99,10 +94,7 @@ body {
 
 .next-step {
   display: flex;
-  /* margin-top: 20px; */
-  /* margin-bottom: 20px; */
   margin-left: auto;
-  /* margin-right: 20px; */
   border: none;
   padding: 10px 20px;
   border-radius: 10px;
@@ -114,26 +106,24 @@ body {
 /* sidebar end */
 
 /* step-1 start */
-.step-1 {
+.step-content {
   display: flex;
-  /* width: 100%; */
 }
-.step-1 form {
+.step-content form {
   display: flex;
   flex-direction: column;
-  /* flex: 1; */
   justify-content: center;
   gap: 15px;
 }
 
 .label {
   color: hsl(213, 96%, 18%);
-  display: flex;
-  align-items: center;
   justify-content: space-between;
+  display: flex;
+  flex-direction: column;
 }
 
-.step-1 form input {
+.step-content form input {
   padding: 15px;
   border: 1px solid hsl(231, 11%, 63%);
   border-radius: 10px;
@@ -148,10 +138,10 @@ form input::placeholder {
 }
 
 form .error {
-  /* display: none; */
   color: hsl(354, 84%, 57%);
   font-size: 10px;
   font-weight: 700;
+  text-align: end;
 }
 
 .grow {
@@ -159,7 +149,3 @@ form .error {
 }
 
 /* step-1 end */
-
-.attribution {
-  align-self: end;
-}
